# Rumour-Mill

./: .gitignore  BLOG.md  Dockerfile  README.md  openenv.yaml  pyproject.toml  requirements.txt
demo/: __init__.py  inference_agent.py  sample_episodes.py  visualize.py
environment/: __init__.py  characters.py  ground_truth.py  models.py  reward.py  rumor_env.py  tasks.py
evaluation/: __init__.py  baseline_agent.py  metrics.py
server/: app.py
training/: __init__.py  config.py  train_agent.py
