[project]
name = "rumor-mill"
version = "0.1.0"
description = "Rumor Mill: an OpenEnv-style environment for truth discovery in noisy organizations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "matplotlib>=3.8.0",
  "openenv-core>=0.2.3",
  "streamlit>=1.38.0",
  "pydantic>=2.8.2",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = []
